--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         msgEl.innerText = 'Processing...';
         msgEl.className = '';
 
-        fetch('https://falling-frog-8c6d.ev-dmaundu.workers.dev/', {
+        fetch('https://tiny-base-3032.ev-dmaundu.workers.dev/', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ nationalId, amount, promoCode, mpesaNumber })
