--- a/index.html
+++ b/index.html
@@ -4,7 +4,147 @@
     <base target="_top" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      /* your existing styles unchanged */
+      html, body {
+        height: 100%; margin: 0; padding: 0;
+      }
+      body {
+        font-family: Arial, sans-serif;
+        background: linear-gradient(to top right, #cde6f9, #f0f8ff);
+        color: #333;
+        position: relative;
+        overflow: auto;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        min-height: 100vh;
+        padding: 20px;
+      }
+      .bubbles {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%; height: 100%; overflow: hidden;
+      }
+      .bubbles span {
+        position: absolute;
+        display: block;
+        width: 20px; height: 20px;
+        background: rgba(0, 123, 255, 0.2);
+        border-radius: 50%;
+        animation: float 20s infinite ease-in-out;
+        bottom: -150px;
+      }
+      .bubbles span:nth-child(odd) { background: rgba(0, 200, 255, 0.15); }
+      @keyframes float {
+        0% { transform: translateY(0) scale(1); opacity: 1; }
+        100% { transform: translateY(-1000px) scale(1.5); opacity: 0; }
+      }
+      .bubbles span:nth-child(1)  { left: 5%; animation-duration: 15s; }
+      .bubbles span:nth-child(2)  { left: 15%; animation-duration: 18s; }
+      .bubbles span:nth-child(3)  { left: 25%; animation-duration: 12s; }
+      .bubbles span:nth-child(4)  { left: 35%; animation-duration: 16s; }
+      .bubbles span:nth-child(5)  { left: 45%; animation-duration: 14s; }
+      .bubbles span:nth-child(6)  { left: 55%; animation-duration: 20s; }
+      .bubbles span:nth-child(7)  { left: 65%; animation-duration: 17s; }
+      .bubbles span:nth-child(8)  { left: 75%; animation-duration: 19s; }
+      .bubbles span:nth-child(9)  { left: 85%; animation-duration: 13s; }
+      .bubbles span:nth-child(10) { left: 95%; animation-duration: 21s; }
+      .bubbles span:nth-child(11) { left: 10%; animation-duration: 16s; }
+      .bubbles span:nth-child(12) { left: 20%; animation-duration: 18s; }
+      .bubbles span:nth-child(13) { left: 30%; animation-duration: 14s; }
+      .bubbles span:nth-child(14) { left: 40%; animation-duration: 19s; }
+      .bubbles span:nth-child(15) { left: 50%; animation-duration: 22s; }
+      .bubbles span:nth-child(16) { left: 60%; animation-duration: 15s; }
+      .bubbles span:nth-child(17) { left: 70%; animation-duration: 21s; }
+      .bubbles span:nth-child(18) { left: 80%; animation-duration: 16s; }
+      .bubbles span:nth-child(19) { left: 90%; animation-duration: 18s; }
+      .bubbles span:nth-child(20) { left: 95%; animation-duration: 20s; }
+
+      .form-container {
+        max-width: 480px;
+        width: 100%;
+        text-align: center;
+      }
+      .logo {
+        display: block;
+        margin: 0 auto 16px auto;
+        max-width: 180px;
+        height: auto;
+        border-radius: 8px;
+      }
+      h2 {
+        text-align: center;
+        color: #0077cc;
+        margin-bottom: 24px;
+      }
+      label {
+        font-weight: 600;
+        margin: 12px 0 4px 0;
+        display: block;
+        color: #444;
+        text-align: left;
+      }
+      input, button {
+        display: block;
+        padding: 12px 14px;
+        width: 100%; max-width: 400px;
+        border: 1.5px solid #ccc;
+        border-radius: 6px;
+        font-size: 16px;
+        box-sizing: border-box;
+        margin: 0 auto;
+      }
+      input:focus {
+        border-color: #0077cc;
+        outline: none;
+        background: #eef8ff;
+      }
+      button {
+        background-color: #0077cc;
+        color: white;
+        font-weight: 600;
+        cursor: pointer;
+        margin: 20px auto;
+        max-width: 400px;
+        border: none;
+        border-radius: 6px;
+        box-shadow: 0 3px 8px rgba(0,119,204,0.4);
+        transition: background-color 0.3s ease;
+      }
+      button:hover {
+        background-color: #005fa3;
+      }
+      #responseMsg {
+        margin: 20px auto;
+        font-weight: 600;
+        padding: 12px 15px;
+        border-radius: 6px;
+        max-width: 400px;
+        box-sizing: border-box;
+        min-height: 40px;
+        text-align: center;
+      }
+      .success {
+        background-color: #e6f4ea;
+        color: #2d7a35;
+        border: 1.5px solid #2d7a35;
+      }
+      .error {
+        background-color: #fdecea;
+        color: #a33a3a;
+        border: 1.5px solid #a33a3a;
+      }
+      @media (max-width: 440px) {
+        .logo {
+          max-width: 140px;
+          margin-bottom: 12px;
+        }
+        input, button, #responseMsg {
+          max-width: 100%;
+        }
+      }
     </style>
   </head>
   <body>
@@ -89,22 +229,22 @@
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, nationalId, phoneNumber, amount, mpesaNumber })
         })
-          .then((response) => response.json())
-          .then((data) => {
-            msgEl.innerText = data.message;
-            msgEl.className = data.success ? 'success' : 'error';
-            if (data.success) {
-              document.getElementById('name').value = '';
-              document.getElementById('nationalId').value = '';
-              document.getElementById('phoneNumber').value = '';
-              document.getElementById('amount').value = '';
-              document.getElementById('mpesaNumber').value = '';
-            }
-          })
-          .catch(() => {
-            msgEl.innerText = 'An error occurred. Please try again.';
-            msgEl.className = 'error';
-          });
+        .then((response) => response.json())
+        .then((data) => {
+          msgEl.innerText = data.message;
+          msgEl.className = data.success ? 'success' : 'error';
+          if (data.success) {
+            document.getElementById('name').value = '';
+            document.getElementById('nationalId').value = '';
+            document.getElementById('phoneNumber').value = '';
+            document.getElementById('amount').value = '';
+            document.getElementById('mpesaNumber').value = '';
+          }
+        })
+        .catch(() => {
+          msgEl.innerText = 'An error occurred. Please try again.';
+          msgEl.className = 'error';
+        });
       }
     </script>
   </body>
