--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 
     <div class="form-container">
       <img src="https://i.imgur.com/3CNZdsB.jpeg" alt="Logo" class="logo" />
-      <h2>Buy SMS Credits via Mpesa</h2>
+      <h2>Become a Prime Contact</h2>
       <p style="color: red; font-weight: bold; text-align: center; margin-top: -12px;">
-        After successful purchase of SMS credits, go to your dashboard to view updated SMS credits.
+        After successful payment, you will be added to your preferred user database to receive messages.
       </p>
 
       <label for="name">Full Name:</label>
@@ -201,7 +201,7 @@
           return;
         }
         if (!nationalId) {
-          msgEl.innerText = 'Please enter your National ID or USER ID.';
+          msgEl.innerText = 'Please enter National ID or USER ID.';
           msgEl.className = 'error';
           return;
         }
