--- a/index.html
+++ b/index.html
@@ -165,7 +165,14 @@
       <label for="name">Full Name:</label>
       <input type="text" id="name" required autocomplete="off" />
 
-      <label for="nationalId">National ID or USER ID:</label>
+      <label for="nationalId">
+  National ID or USER ID:
+  <a href="https://masomodigital.github.io/GET-USER-ID/" style="margin-left:10px;">
+    <button style="background-color: red; color: white; border: none; border-radius: 4px; padding: 4px 8px; font-size: 0.9rem; cursor: pointer;">
+      Get User ID
+    </button>
+  </a>
+</label>
       <input type="text" id="nationalId" required autocomplete="off" />
 
       <label for="phoneNumber">Phone Number (Contact):</label>
